--- a/_data/trumps.yml
+++ b/_data/trumps.yml
@@ -1,4 +1,7 @@
 poops:
+- location: Mar-a-Lago
+  date: 2017-11-21
+  link: https://twitter.com/markknoller/status/933118963634114560
 - location: Trump International Hotel Waikiki
   date: 2017-11-4
   link: https://www.politico.com/story/2017/11/04/trump-waikiki-hotel-asia-trip-244548
