--- a/_data/trumps.yml
+++ b/_data/trumps.yml
@@ -1,4 +1,7 @@
 poops:
+- location: Trump International Golf Club in West Palm Beach
+  date: 2017-11-22
+  link: https://www.washingtonpost.com/news/politics/wp/2017/11/22/trumps-team-insists-he-has-a-full-schedule-an-hour-before-he-goes-golfing/?hpid=hp_hp-more-top-stories-2_trump-full-schedule-450pm%3Ahomepage%2Fstory&utm_term=.7097a6670fa7
 - location: Mar-a-Lago
   date: 2017-11-21
   link: https://twitter.com/markknoller/status/933118963634114560
