added some historical poops to get started on an archive page

--- a/_data/trumps.yml
+++ b/_data/trumps.yml
@@ -19,3 +19,31 @@ poops:
   city: Honolulu, Hawaii
   date: 2017-11-4
   link: https://www.politico.com/story/2017/11/04/trump-waikiki-hotel-asia-trip-244548
+- location: Trump National Golf Club
+  city: Potomac Falls, Virginia
+  date: 2017-10-28
+  url: https://factba.se/topic/calendar
+- location: Trump International Hotel
+  city: Washington DC
+  date: 2017-10-28
+  url: https://factba.se/topic/calendar
+- location: Trump National Golf Club
+  city: Potomac Falls, Virginia
+  date: 2017-10-22
+  url: https://factba.se/topic/calendar
+- location: Trump National Golf Club
+  city: Potomac Falls, Virginia
+  date: 2017-10-21
+  url: https://factba.se/topic/calendar
+- location: Trump National Golf Club
+  city: Potomac Falls, Virginia
+  date: 2017-10-15
+  url: https://factba.se/topic/calendar
+- location: Trump National Golf Club
+  city: Potomac Falls, Virginia
+  date: 2017-10-14
+  url: https://factba.se/topic/calendar
+- location: Trump International Hotel
+  city: Washington DC
+  date: 2017-10-14
+  url: https://factba.se/topic/calendar
