adding more archive poops. this is tedious and depressing

--- a/_data/trumps.yml
+++ b/_data/trumps.yml
@@ -1,6 +1,10 @@
 poops:
 - location: Trump International Golf Club
   city: West Palm Beach, Florida
+  date: 2017-11-26
+  link: https://twitter.com/kylegriffin1/status/934795211510829056
+- location: Trump International Golf Club
+  city: West Palm Beach, Florida
   date: 2017-11-25
   link: https://twitter.com/markknoller/status/934415994080186369
 - location: Trump National Golf Club
@@ -51,3 +55,135 @@ poops:
   city: Washington DC
   date: 2017-10-14
   link: https://factba.se/topic/calendar
+- location: Trump National Golf Club
+  city: Potomac Falls, Virginia
+  date: 2017-10-9
+  link: https://img.washingtonpost.com/wp-apps/imrs.php?src=https://img.washingtonpost.com/news/politics/wp-content/uploads/sites/11/2017/11/Trump-Properties-1.jpg&w=1484
+- location: Trump National Golf Club
+  city: Potomac Falls, Virginia
+  date: 2017-10-8
+  link: https://img.washingtonpost.com/wp-apps/imrs.php?src=https://img.washingtonpost.com/news/politics/wp-content/uploads/sites/11/2017/11/Trump-Properties-1.jpg&w=1484
+- location: Trump National Golf Club
+  city: Potomac Falls, Virginia
+  date: 2017-10-7
+  link: https://img.washingtonpost.com/wp-apps/imrs.php?src=https://img.washingtonpost.com/news/politics/wp-content/uploads/sites/11/2017/11/Trump-Properties-1.jpg&w=1484
+- location: Trump National Golf Club
+  city: Bedminster, New Jersey
+  date: 2017-10-1
+  link: https://img.washingtonpost.com/wp-apps/imrs.php?src=https://img.washingtonpost.com/news/politics/wp-content/uploads/sites/11/2017/11/Trump-Properties-1.jpg&w=1484
+- location: Trump National Golf Club
+  city: Bedminster, New Jersey
+  date: 2017-9-30
+  link: https://img.washingtonpost.com/wp-apps/imrs.php?src=https://img.washingtonpost.com/news/politics/wp-content/uploads/sites/11/2017/11/Trump-Properties-1.jpg&w=1484
+- location: Trump National Golf Club
+  city: Bedminster, New Jersey
+  date: 2017-9-29
+  link: https://img.washingtonpost.com/wp-apps/imrs.php?src=https://img.washingtonpost.com/news/politics/wp-content/uploads/sites/11/2017/11/Trump-Properties-1.jpg&w=1484
+- location: Trump National Golf Club
+  city: Bedminster, New Jersey
+  date: 2017-9-24
+  link: https://img.washingtonpost.com/wp-apps/imrs.php?src=https://img.washingtonpost.com/news/politics/wp-content/uploads/sites/11/2017/11/Trump-Properties-1.jpg&w=1484
+- location: Trump National Golf Club
+  city: Bedminster, New Jersey
+  date: 2017-9-23
+  link: https://img.washingtonpost.com/wp-apps/imrs.php?src=https://img.washingtonpost.com/news/politics/wp-content/uploads/sites/11/2017/11/Trump-Properties-1.jpg&w=1484
+- location: Trump National Golf Club
+  city: Bedminster, New Jersey
+  date: 2017-9-22
+  link: https://img.washingtonpost.com/wp-apps/imrs.php?src=https://img.washingtonpost.com/news/politics/wp-content/uploads/sites/11/2017/11/Trump-Properties-1.jpg&w=1484
+- location: Trump National Golf Club
+  city: Bedminster, New Jersey
+  date: 2017-9-21
+  link: https://img.washingtonpost.com/wp-apps/imrs.php?src=https://img.washingtonpost.com/news/politics/wp-content/uploads/sites/11/2017/11/Trump-Properties-1.jpg&w=1484
+- location: Trump National Golf Club
+  city: Bedminster, New Jersey
+  date: 2017-9-20
+  link: https://img.washingtonpost.com/wp-apps/imrs.php?src=https://img.washingtonpost.com/news/politics/wp-content/uploads/sites/11/2017/11/Trump-Properties-1.jpg&w=1484
+- location: Trump National Golf Club
+  city: Bedminster, New Jersey
+  date: 2017-9-19
+  link: https://img.washingtonpost.com/wp-apps/imrs.php?src=https://img.washingtonpost.com/news/politics/wp-content/uploads/sites/11/2017/11/Trump-Properties-1.jpg&w=1484
+- location: Trump National Golf Club
+  city: Bedminster, New Jersey
+  date: 2017-9-18
+  link: https://img.washingtonpost.com/wp-apps/imrs.php?src=https://img.washingtonpost.com/news/politics/wp-content/uploads/sites/11/2017/11/Trump-Properties-1.jpg&w=1484
+- location: Trump National Golf Club
+  city: Bedminster, New Jersey
+  date: 2017-9-17
+  link: https://img.washingtonpost.com/wp-apps/imrs.php?src=https://img.washingtonpost.com/news/politics/wp-content/uploads/sites/11/2017/11/Trump-Properties-1.jpg&w=1484
+- location: Trump National Golf Club
+  city: Bedminster, New Jersey
+  date: 2017-9-16
+  link: https://img.washingtonpost.com/wp-apps/imrs.php?src=https://img.washingtonpost.com/news/politics/wp-content/uploads/sites/11/2017/11/Trump-Properties-1.jpg&w=1484
+- location: Trump National Golf Club
+  city: Bedminster, New Jersey
+  date: 2017-9-15
+  link: https://img.washingtonpost.com/wp-apps/imrs.php?src=https://img.washingtonpost.com/news/politics/wp-content/uploads/sites/11/2017/11/Trump-Properties-1.jpg&w=1484
+- location: Trump National Golf Club
+  city: Bedminster, New Jersey
+  date: 2017-8-20
+  link: https://img.washingtonpost.com/wp-apps/imrs.php?src=https://img.washingtonpost.com/news/politics/wp-content/uploads/sites/11/2017/11/Trump-Properties-1.jpg&w=1484
+- location: Trump National Golf Club
+  city: Bedminster, New Jersey
+  date: 2017-8-19
+  link: https://img.washingtonpost.com/wp-apps/imrs.php?src=https://img.washingtonpost.com/news/politics/wp-content/uploads/sites/11/2017/11/Trump-Properties-1.jpg&w=1484
+- location: Trump National Golf Club
+  city: Bedminster, New Jersey
+  date: 2017-8-18
+  link: https://img.washingtonpost.com/wp-apps/imrs.php?src=https://img.washingtonpost.com/news/politics/wp-content/uploads/sites/11/2017/11/Trump-Properties-1.jpg&w=1484
+- location: Trump National Golf Club
+  city: Bedminster, New Jersey
+  date: 2017-8-17
+  link: https://img.washingtonpost.com/wp-apps/imrs.php?src=https://img.washingtonpost.com/news/politics/wp-content/uploads/sites/11/2017/11/Trump-Properties-1.jpg&w=1484
+- location: Trump National Golf Club
+  city: Bedminster, New Jersey
+  date: 2017-8-16
+  link: https://img.washingtonpost.com/wp-apps/imrs.php?src=https://img.washingtonpost.com/news/politics/wp-content/uploads/sites/11/2017/11/Trump-Properties-1.jpg&w=1484
+- location: Trump National Golf Club
+  city: Bedminster, New Jersey
+  date: 2017-8-15
+  link: https://img.washingtonpost.com/wp-apps/imrs.php?src=https://img.washingtonpost.com/news/politics/wp-content/uploads/sites/11/2017/11/Trump-Properties-1.jpg&w=1484
+- location: Trump Tower
+  city: New York City
+  date: 2017-8-14
+  link: https://www.nytimes.com/2017/08/15/insider/trump-and-new-york-city.html?_r=0
+- location: Trump National Golf Club
+  city: Bedminster, New Jersey
+  date: 2017-8-13
+  link: https://img.washingtonpost.com/wp-apps/imrs.php?src=https://img.washingtonpost.com/news/politics/wp-content/uploads/sites/11/2017/11/Trump-Properties-1.jpg&w=1484
+- location: Trump National Golf Club
+  city: Bedminster, New Jersey
+  date: 2017-8-12
+  link: https://img.washingtonpost.com/wp-apps/imrs.php?src=https://img.washingtonpost.com/news/politics/wp-content/uploads/sites/11/2017/11/Trump-Properties-1.jpg&w=1484
+- location: Trump National Golf Club
+  city: Bedminster, New Jersey
+  date: 2017-8-11
+  link: https://img.washingtonpost.com/wp-apps/imrs.php?src=https://img.washingtonpost.com/news/politics/wp-content/uploads/sites/11/2017/11/Trump-Properties-1.jpg&w=1484
+- location: Trump National Golf Club
+  city: Bedminster, New Jersey
+  date: 2017-8-10
+  link: https://img.washingtonpost.com/wp-apps/imrs.php?src=https://img.washingtonpost.com/news/politics/wp-content/uploads/sites/11/2017/11/Trump-Properties-1.jpg&w=1484
+- location: Trump National Golf Club
+  city: Bedminster, New Jersey
+  date: 2017-8-9
+  link: https://img.washingtonpost.com/wp-apps/imrs.php?src=https://img.washingtonpost.com/news/politics/wp-content/uploads/sites/11/2017/11/Trump-Properties-1.jpg&w=1484
+- location: Trump National Golf Club
+  city: Bedminster, New Jersey
+  date: 2017-8-8
+  link: https://img.washingtonpost.com/wp-apps/imrs.php?src=https://img.washingtonpost.com/news/politics/wp-content/uploads/sites/11/2017/11/Trump-Properties-1.jpg&w=1484
+- location: Trump National Golf Club
+  city: Bedminster, New Jersey
+  date: 2017-8-7
+  link: https://img.washingtonpost.com/wp-apps/imrs.php?src=https://img.washingtonpost.com/news/politics/wp-content/uploads/sites/11/2017/11/Trump-Properties-1.jpg&w=1484
+- location: Trump National Golf Club
+  city: Bedminster, New Jersey
+  date: 2017-8-6
+  link: https://img.washingtonpost.com/wp-apps/imrs.php?src=https://img.washingtonpost.com/news/politics/wp-content/uploads/sites/11/2017/11/Trump-Properties-1.jpg&w=1484
+- location: Trump National Golf Club
+  city: Bedminster, New Jersey
+  date: 2017-8-5
+  link: https://img.washingtonpost.com/wp-apps/imrs.php?src=https://img.washingtonpost.com/news/politics/wp-content/uploads/sites/11/2017/11/Trump-Properties-1.jpg&w=1484
+- location: Trump National Golf Club
+  city: Bedminster, New Jersey
+  date: 2017-8-4
+  link: https://img.washingtonpost.com/wp-apps/imrs.php?src=https://img.washingtonpost.com/news/politics/wp-content/uploads/sites/11/2017/11/Trump-Properties-1.jpg&w=1484
