added the month of July, and reorged the presentation so it is date-first

--- a/_data/trumps.yml
+++ b/_data/trumps.yml
@@ -187,3 +187,63 @@ poops:
   city: Bedminster, New Jersey
   date: 2017-8-4
   link: https://img.washingtonpost.com/wp-apps/imrs.php?src=https://img.washingtonpost.com/news/politics/wp-content/uploads/sites/11/2017/11/Trump-Properties-1.jpg&w=1484
+- location: Trump National Golf club
+  city: Potomac Falls, Virginia
+  date: 2017-7-30
+  link: https://factba.se/topic/calendar
+- location: Trump International Hotel
+  city: Washington DC
+  date: 2017-7-29
+  link: https://factba.se/topic/calendar
+- location: Trump National Golf club
+  city: Potomac Falls, Virginia
+  date: 2017-7-23
+  link: https://factba.se/topic/calendar
+- location: Trump National Golf club
+  city: Potomac Falls, Virginia
+  date: 2017-7-22
+  link: https://factba.se/topic/calendar
+- location: Trump National Golf Club
+  city: Bedminster, New Jersey
+  date: 2017-7-16
+  link: https://factba.se/topic/calendar
+- location: Trump National Golf Club
+  city: Bedminster, New Jersey
+  date: 2017-7-16
+  link: https://factba.se/topic/calendar
+- location: Trump National Golf Club
+  city: Bedminster, New Jersey
+  date: 2017-7-15
+  link: https://factba.se/topic/calendar
+- location: Trump National Golf Club
+  city: Bedminster, New Jersey
+  date: 2017-7-14
+  link: http://www.latimes.com/politics/la-pol-updates-trump-tweets-saturday-july-15-htmlstory.html
+- location: Trump National Golf Club
+  city: Bedminster, New Jersey
+  date: 2017-7-13
+  link: http://www.latimes.com/politics/la-pol-updates-trump-tweets-friday-july-14-htmlstory.html
+- location: Trump National Golf Club
+  city: Potomac Falls, Virginia
+  date: 2017-7-9
+  link: https://factba.se/topic/calendar
+- location: Trump National Golf Club
+  city: Potomac Falls, Virginia
+  date: 2017-7-4
+  link: http://thehill.com/blogs/blog-briefing-room/news/340606-trump-spends-july-4-at-his-virginia-golf-club
+- location: Trump National Golf Club
+  city: Bedminster, New Jersey
+  date: 2017-7-3
+  link: https://factba.se/topic/calendar
+- location: Trump National Golf Club
+  city: Bedminster, New Jersey
+  date: 2017-7-2
+  link: https://factba.se/topic/calendar
+- location: Trump National Golf Club
+  city: Bedminster, New Jersey
+  date: 2017-7-1
+  link: https://factba.se/topic/calendar
+- location: Trump National Golf Club
+  city: Bedminster, New Jersey
+  date: 2017-6-30
+  link: https://factba.se/topic/calendar
