poops through April 1

--- a/_data/trumps.yml
+++ b/_data/trumps.yml
@@ -247,3 +247,95 @@ poops:
   city: Bedminster, New Jersey
   date: 2017-6-30
   link: https://factba.se/topic/calendar
+- location: Trump National Golf Club
+  city: Potomac Falls, Virginia
+  date: 2017-6-25
+  link: https://factba.se/topic/calendar
+- location: Trump National Golf Club
+  city: Potomac Falls, Virginia
+  date: 2017-6-24
+  link: https://factba.se/topic/calendar
+- location: Trump National Golf Club
+  city: Bedminster, New Jersey
+  date: 2017-6-11
+  link: https://factba.se/topic/calendar
+- location: Trump National Golf Club
+  city: Bedminster, New Jersey
+  date: 2017-6-10
+  link: https://factba.se/topic/calendar
+- location: Trump National Golf Club
+  city: Bedminster, New Jersey
+  date: 2017-6-9
+  link: https://factba.se/topic/calendar
+- location: Trump National Golf Club
+  city: Potomac Falls, Virginia
+  date: 2017-6-4
+  link: https://factba.se/topic/calendar
+- location: Trump National Golf Club
+  city: Potomac Falls, Virginia
+  date: 2017-6-3
+  link: https://factba.se/topic/calendar
+- location: Trump National Golf Club
+  city: Potomac Falls, Virginia
+  date: 2017-5-14
+  link: http://www.latimes.com/politics/la-pol-updates-everything-president-trump-s-day-in-tweets-sunday-may-1494816140-htmlstory.html
+- location: Trump National Golf Club
+  city: Bedminster, New Jersey
+  date: 2017-5-7
+  link: https://factba.se/topic/calendar
+- location: Trump National Golf Club
+  city: Bedminster, New Jersey
+  date: 2017-5-6
+  link: https://factba.se/topic/calendar
+- location: Trump National Golf Club
+  city: Bedminster, New Jersey
+  date: 2017-5-5
+  link: https://factba.se/topic/calendar
+- location: Trump National Golf Club
+  city: Bedminster, New Jersey
+  date: 2017-5-4
+  link: http://www.mycentraljersey.com/story/news/politics/new-jersey/2017/05/03/quiet-somerset-hills-preparing-trump-weekend/310063001/
+- location: Trump National Golf Club
+  city: Potomac Falls, Virginia
+  date: 2017-4-30
+  link: https://factba.se/topic/calendar
+- location: Trump International Hotel
+  city: Washington DC
+  date: 2017-4-22
+  link: https://www.inquisitr.com/4168604/melania-ivanka-join-donald-trump-at-d-c-dinner-on-april-22-photos-videos-from-trump-international-hotel/
+- location: Mar-a-Lago
+  city: Palm Beach, Florida
+  date: 2017-4-16
+  link: http://www.palmbeachpost.com/news/local/photos-president-donald-trump-easter-visit-mar-lago/qMLgJ4IEjjzMOjqglSTVrK/
+- location: Trump International Golf Club
+  city: West Palm Beach, Florida
+  date: 2017-4-15
+  link: https://factba.se/topic/calendar
+- location: Trump International Golf Club
+  city: West Palm Beach, Florida
+  date: 2017-4-14
+  link: https://factba.se/topic/calendar
+- location: Mar-a-Lago
+  city: Palm Beach, Florida
+  date: 2017-4-13
+  link: https://factba.se/topic/calendar
+- location: Trump International Golf Club
+  city: West Palm Beach, Florida
+  date: 2017-4-9
+  link: https://factba.se/topic/calendar
+- location: Trump International Golf Club
+  city: West Palm Beach, Florida
+  date: 2017-4-8
+  link: https://factba.se/topic/calendar
+- location: Mar-a-Lago
+  city: Palm Beach, Florida
+  date: 2017-4-7
+  link: https://factba.se/topic/calendar
+- location: Mar-a-Lago
+  city: Palm Beach, Florida
+  date: 2017-4-6
+  link: https://factba.se/topic/calendar
+- location: Trump National Golf Club
+  city: Potomac Falls, Virginia
+  date: 2017-4-1
+  link: https://factba.se/topic/calendar
