all poops entered through inauguration day

--- a/_data/trumps.yml
+++ b/_data/trumps.yml
@@ -339,3 +339,87 @@ poops:
   city: Potomac Falls, Virginia
   date: 2017-4-1
   link: https://factba.se/topic/calendar
+- location: Trump National Golf Club
+  city: Potomac Falls, Virginia
+  date: 2017-3-26
+  link: https://factba.se/topic/calendar
+- location: Trump National Golf Club
+  city: Potomac Falls, Virginia
+  date: 2017-3-25
+  link: https://factba.se/topic/calendar
+- location: Trump International Golf Club
+  city: West Palm Beach, Florida
+  date: 2017-3-19
+  link: https://factba.se/topic/calendar
+- location: Trump International Golf Club
+  city: West Palm Beach, Florida
+  date: 2017-3-18
+  link: https://factba.se/topic/calendar
+- location: Mar-a-Lago
+  city: Palm Beach, Florida
+  date: 2017-3-17
+  link: https://factba.se/topic/calendar
+- location: Trump National Golf Club
+  city: Potomac Falls, Virginia
+  date: 2017-3-11
+  link: https://factba.se/topic/calendar
+- location: Trump International Golf Club
+  city: West Palm Beach, Florida
+  date: 2017-3-5
+  link: https://factba.se/topic/calendar
+- location: Trump International Golf Club
+  city: West Palm Beach, Florida
+  date: 2017-3-4
+  link: https://factba.se/topic/calendar
+- location: Mar-a-Lago
+  city: Palm Beach, Florida
+  date: 2017-3-3
+  link: https://factba.se/topic/calendar
+- location: Trump International Hotel
+  city: Washington DC
+  date: 2017-2-25
+  link: https://factba.se/topic/calendar
+- location: Mar-a-Lago
+  city: Palm Beach, Florida
+  date: 2017-2-20
+  link: https://factba.se/topic/calendar
+- location: Trump International Golf Club
+  city: West Palm Beach, Florida
+  date: 2017-2-19
+  link: https://factba.se/topic/calendar
+- location: Trump International Golf Club
+  city: West Palm Beach, Florida
+  date: 2017-2-18
+  link: https://factba.se/topic/calendar
+- location: Mar-a-Lago
+  city: Palm Beach, Florida
+  date: 2017-2-17
+  link: https://factba.se/topic/calendar
+- location: Trump National Golf Club
+  city: Jupiter, Florida
+  date: 2017-2-12
+  link: https://twitter.com/realDonaldTrump/status/934031535757582336
+- location: Trump International Golf Club
+  city: West Palm Beach, Florida
+  date: 2017-2-11
+  link: https://factba.se/topic/calendar
+- location: Mar-a-Lago
+  city: Palm Beach, Florida
+  date: 2017-2-10
+  link: https://factba.se/topic/calendar
+- location: Mar-a-Lago
+  city: Palm Beach, Florida
+  date: 2017-2-6
+  link: https://factba.se/topic/calendar
+- location: Trump International Golf Club
+  city: West Palm Beach, Florida
+  date: 2017-2-5
+  link: https://factba.se/topic/calendar
+- location: Trump International Golf Club
+  city: West Palm Beach, Florida
+  date: 2017-2-4
+  link: https://factba.se/topic/calendar
+- location: Mar-a-Lago
+  city: Palm Beach, Florida
+  date: 2017-2-3
+  link: https://factba.se/topic/calendar
