--- a/_data/trumps.yml
+++ b/_data/trumps.yml
@@ -34,51 +34,51 @@ poops:
 - location: Trump International Hotel
   city: Washington DC
   date: 2017-10-28
-  link: https://factba.se/topic/calendar
+  link: https://twitter.com/kylegriffin1/status/924411018855534593
 - location: Trump National Golf Club
   city: Potomac Falls, Virginia
   date: 2017-10-22
-  link: https://factba.se/topic/calendar
+  link: https://twitter.com/EricLiptonNYT/status/922185089534124032
 - location: Trump National Golf Club
   city: Potomac Falls, Virginia
   date: 2017-10-21
-  link: https://factba.se/topic/calendar
+  link: https://twitter.com/POTUS_Schedule/status/921755120634880002
 - location: Trump National Golf Club
   city: Potomac Falls, Virginia
   date: 2017-10-15
-  link: https://factba.se/topic/calendar
+  link: https://twitter.com/wpjenna/status/919565701622456320
 - location: Trump National Golf Club
   city: Potomac Falls, Virginia
   date: 2017-10-14
-  link: https://factba.se/topic/calendar
+  link: https://twitter.com/EricLiptonNYT/status/919359928845918209
 - location: Trump International Hotel
   city: Washington DC
   date: 2017-10-14
-  link: https://factba.se/topic/calendar
+  link: https://twitter.com/EricLiptonNYT/status/919359928845918209
 - location: Trump National Golf Club
   city: Potomac Falls, Virginia
   date: 2017-10-9
-  link: https://img.washingtonpost.com/wp-apps/imrs.php?src=https://img.washingtonpost.com/news/politics/wp-content/uploads/sites/11/2017/11/Trump-Properties-1.jpg&w=1484
+  link: https://twitter.com/ABC/status/917518508489093120
 - location: Trump National Golf Club
   city: Potomac Falls, Virginia
   date: 2017-10-8
-  link: https://img.washingtonpost.com/wp-apps/imrs.php?src=https://img.washingtonpost.com/news/politics/wp-content/uploads/sites/11/2017/11/Trump-Properties-1.jpg&w=1484
+  link: https://twitter.com/W7VOA/status/917042576850587653
 - location: Trump National Golf Club
   city: Potomac Falls, Virginia
   date: 2017-10-7
-  link: https://img.washingtonpost.com/wp-apps/imrs.php?src=https://img.washingtonpost.com/news/politics/wp-content/uploads/sites/11/2017/11/Trump-Properties-1.jpg&w=1484
+  link: https://twitter.com/W7VOA/status/916667020753719296
 - location: Trump National Golf Club
   city: Bedminster, New Jersey
   date: 2017-10-1
-  link: https://img.washingtonpost.com/wp-apps/imrs.php?src=https://img.washingtonpost.com/news/politics/wp-content/uploads/sites/11/2017/11/Trump-Properties-1.jpg&w=1484
+  link: https://www.washingtonpost.com/news/post-politics/wp/2017/09/30/on-twitter-trump-attacks-mayor-of-san-juan-for-poor-leadership-amid-deepening-crisis/?utm_term=.0f4e73538f64
 - location: Trump National Golf Club
   city: Bedminster, New Jersey
   date: 2017-9-30
-  link: https://img.washingtonpost.com/wp-apps/imrs.php?src=https://img.washingtonpost.com/news/politics/wp-content/uploads/sites/11/2017/11/Trump-Properties-1.jpg&w=1484
+  link: https://www.washingtonpost.com/news/post-politics/wp/2017/09/30/on-twitter-trump-attacks-mayor-of-san-juan-for-poor-leadership-amid-deepening-crisis/?utm_term=.0f4e73538f64
 - location: Trump National Golf Club
   city: Bedminster, New Jersey
   date: 2017-9-29
-  link: https://img.washingtonpost.com/wp-apps/imrs.php?src=https://img.washingtonpost.com/news/politics/wp-content/uploads/sites/11/2017/11/Trump-Properties-1.jpg&w=1484
+  link: https://www.washingtonpost.com/news/post-politics/wp/2017/09/30/on-twitter-trump-attacks-mayor-of-san-juan-for-poor-leadership-amid-deepening-crisis/?utm_term=.0f4e73538f64
 - location: Trump National Golf Club
   city: Bedminster, New Jersey
   date: 2017-9-24
