added more links in, now from present to late July

--- a/_data/trumps.yml
+++ b/_data/trumps.yml
@@ -82,67 +82,75 @@ poops:
 - location: Trump National Golf Club
   city: Bedminster, New Jersey
   date: 2017-9-24
-  link: https://img.washingtonpost.com/wp-apps/imrs.php?src=https://img.washingtonpost.com/news/politics/wp-content/uploads/sites/11/2017/11/Trump-Properties-1.jpg&w=1484
+  link: https://twitter.com/markknoller/status/911448327602008066
 - location: Trump National Golf Club
   city: Bedminster, New Jersey
   date: 2017-9-23
-  link: https://img.washingtonpost.com/wp-apps/imrs.php?src=https://img.washingtonpost.com/news/politics/wp-content/uploads/sites/11/2017/11/Trump-Properties-1.jpg&w=1484
+  link: https://twitter.com/markknoller/status/911448327602008066
 - location: Trump National Golf Club
   city: Bedminster, New Jersey
   date: 2017-9-22
-  link: https://img.washingtonpost.com/wp-apps/imrs.php?src=https://img.washingtonpost.com/news/politics/wp-content/uploads/sites/11/2017/11/Trump-Properties-1.jpg&w=1484
+  link: https://twitter.com/markknoller/status/911448327602008066
 - location: Trump National Golf Club
   city: Bedminster, New Jersey
   date: 2017-9-21
-  link: https://img.washingtonpost.com/wp-apps/imrs.php?src=https://img.washingtonpost.com/news/politics/wp-content/uploads/sites/11/2017/11/Trump-Properties-1.jpg&w=1484
-- location: Trump National Golf Club
-  city: Bedminster, New Jersey
+  link: http://www.nj.com/politics/index.ssf/2017/09/trump_lands_in_bedminster_for_another_stay.html
+- location: Trump Tower
+  city: New York City
   date: 2017-9-20
-  link: https://img.washingtonpost.com/wp-apps/imrs.php?src=https://img.washingtonpost.com/news/politics/wp-content/uploads/sites/11/2017/11/Trump-Properties-1.jpg&w=1484
-- location: Trump National Golf Club
-  city: Bedminster, New Jersey
+  link: https://www.politico.com/story/2017/09/14/trump-staying-manhattan-un-general-assembly-trump-tower-242744
+- location: Trump Tower
+  city: New York City
   date: 2017-9-19
-  link: https://img.washingtonpost.com/wp-apps/imrs.php?src=https://img.washingtonpost.com/news/politics/wp-content/uploads/sites/11/2017/11/Trump-Properties-1.jpg&w=1484
-- location: Trump National Golf Club
-  city: Bedminster, New Jersey
+  link: https://www.politico.com/story/2017/09/14/trump-staying-manhattan-un-general-assembly-trump-tower-242744
+- location: Trump Tower
+  city: New York City
   date: 2017-9-18
-  link: https://img.washingtonpost.com/wp-apps/imrs.php?src=https://img.washingtonpost.com/news/politics/wp-content/uploads/sites/11/2017/11/Trump-Properties-1.jpg&w=1484
+  link: https://www.politico.com/story/2017/09/14/trump-staying-manhattan-un-general-assembly-trump-tower-242744
+- location: Trump Tower
+  city: New York City
+  date: 2017-9-17
+  link: https://twitter.com/CREWcrew/status/909574601352650752
 - location: Trump National Golf Club
   city: Bedminster, New Jersey
   date: 2017-9-17
-  link: https://img.washingtonpost.com/wp-apps/imrs.php?src=https://img.washingtonpost.com/news/politics/wp-content/uploads/sites/11/2017/11/Trump-Properties-1.jpg&w=1484
+  link: https://twitter.com/CREWcrew/status/909574601352650752
 - location: Trump National Golf Club
   city: Bedminster, New Jersey
   date: 2017-9-16
-  link: https://img.washingtonpost.com/wp-apps/imrs.php?src=https://img.washingtonpost.com/news/politics/wp-content/uploads/sites/11/2017/11/Trump-Properties-1.jpg&w=1484
+  link: https://patch.com/us/white-house/president-trump-heads-bedminster-white-house-schedule-september-15
 - location: Trump National Golf Club
   city: Bedminster, New Jersey
   date: 2017-9-15
-  link: https://img.washingtonpost.com/wp-apps/imrs.php?src=https://img.washingtonpost.com/news/politics/wp-content/uploads/sites/11/2017/11/Trump-Properties-1.jpg&w=1484
+  link: https://patch.com/us/white-house/president-trump-heads-bedminster-white-house-schedule-september-15
 - location: Trump National Golf Club
   city: Bedminster, New Jersey
   date: 2017-8-20
-  link: https://img.washingtonpost.com/wp-apps/imrs.php?src=https://img.washingtonpost.com/news/politics/wp-content/uploads/sites/11/2017/11/Trump-Properties-1.jpg&w=1484
+  link: https://www.washingtonpost.com/politics/president-trump-settles-in-for-17-day-vacation-at-his-secluded-new-jersey-club/2017/08/05/5c79347c-79d5-11e7-8f39-eeb7d3a2d304_story.html?utm_term=.22138ce95f42
 - location: Trump National Golf Club
   city: Bedminster, New Jersey
   date: 2017-8-19
-  link: https://img.washingtonpost.com/wp-apps/imrs.php?src=https://img.washingtonpost.com/news/politics/wp-content/uploads/sites/11/2017/11/Trump-Properties-1.jpg&w=1484
+  link: https://www.washingtonpost.com/politics/president-trump-settles-in-for-17-day-vacation-at-his-secluded-new-jersey-club/2017/08/05/5c79347c-79d5-11e7-8f39-eeb7d3a2d304_story.html?utm_term=.22138ce95f42
 - location: Trump National Golf Club
   city: Bedminster, New Jersey
   date: 2017-8-18
-  link: https://img.washingtonpost.com/wp-apps/imrs.php?src=https://img.washingtonpost.com/news/politics/wp-content/uploads/sites/11/2017/11/Trump-Properties-1.jpg&w=1484
+  link: https://www.washingtonpost.com/politics/president-trump-settles-in-for-17-day-vacation-at-his-secluded-new-jersey-club/2017/08/05/5c79347c-79d5-11e7-8f39-eeb7d3a2d304_story.html?utm_term=.22138ce95f42
 - location: Trump National Golf Club
   city: Bedminster, New Jersey
   date: 2017-8-17
-  link: https://img.washingtonpost.com/wp-apps/imrs.php?src=https://img.washingtonpost.com/news/politics/wp-content/uploads/sites/11/2017/11/Trump-Properties-1.jpg&w=1484
+  link: https://www.washingtonpost.com/politics/president-trump-settles-in-for-17-day-vacation-at-his-secluded-new-jersey-club/2017/08/05/5c79347c-79d5-11e7-8f39-eeb7d3a2d304_story.html?utm_term=.22138ce95f42
 - location: Trump National Golf Club
   city: Bedminster, New Jersey
   date: 2017-8-16
-  link: https://img.washingtonpost.com/wp-apps/imrs.php?src=https://img.washingtonpost.com/news/politics/wp-content/uploads/sites/11/2017/11/Trump-Properties-1.jpg&w=1484
+  link: https://www.washingtonpost.com/politics/president-trump-settles-in-for-17-day-vacation-at-his-secluded-new-jersey-club/2017/08/05/5c79347c-79d5-11e7-8f39-eeb7d3a2d304_story.html?utm_term=.22138ce95f42
 - location: Trump National Golf Club
   city: Bedminster, New Jersey
   date: 2017-8-15
-  link: https://img.washingtonpost.com/wp-apps/imrs.php?src=https://img.washingtonpost.com/news/politics/wp-content/uploads/sites/11/2017/11/Trump-Properties-1.jpg&w=1484
+  link: https://www.washingtonpost.com/politics/president-trump-settles-in-for-17-day-vacation-at-his-secluded-new-jersey-club/2017/08/05/5c79347c-79d5-11e7-8f39-eeb7d3a2d304_story.html?utm_term=.22138ce95f42
+- location: Trump Tower
+  city: New York City
+  date: 2017-8-15
+  link: https://www.cbsnews.com/news/trump-on-charlottesville-i-think-theres-blame-on-both-sides/
 - location: Trump Tower
   city: New York City
   date: 2017-8-14
@@ -150,43 +158,43 @@ poops:
 - location: Trump National Golf Club
   city: Bedminster, New Jersey
   date: 2017-8-13
-  link: https://img.washingtonpost.com/wp-apps/imrs.php?src=https://img.washingtonpost.com/news/politics/wp-content/uploads/sites/11/2017/11/Trump-Properties-1.jpg&w=1484
+  link: https://www.washingtonpost.com/politics/president-trump-settles-in-for-17-day-vacation-at-his-secluded-new-jersey-club/2017/08/05/5c79347c-79d5-11e7-8f39-eeb7d3a2d304_story.html?utm_term=.22138ce95f42
 - location: Trump National Golf Club
   city: Bedminster, New Jersey
   date: 2017-8-12
-  link: https://img.washingtonpost.com/wp-apps/imrs.php?src=https://img.washingtonpost.com/news/politics/wp-content/uploads/sites/11/2017/11/Trump-Properties-1.jpg&w=1484
+  link: https://www.washingtonpost.com/politics/president-trump-settles-in-for-17-day-vacation-at-his-secluded-new-jersey-club/2017/08/05/5c79347c-79d5-11e7-8f39-eeb7d3a2d304_story.html?utm_term=.22138ce95f42
 - location: Trump National Golf Club
   city: Bedminster, New Jersey
   date: 2017-8-11
-  link: https://img.washingtonpost.com/wp-apps/imrs.php?src=https://img.washingtonpost.com/news/politics/wp-content/uploads/sites/11/2017/11/Trump-Properties-1.jpg&w=1484
+  link: https://www.washingtonpost.com/politics/president-trump-settles-in-for-17-day-vacation-at-his-secluded-new-jersey-club/2017/08/05/5c79347c-79d5-11e7-8f39-eeb7d3a2d304_story.html?utm_term=.22138ce95f42
 - location: Trump National Golf Club
   city: Bedminster, New Jersey
   date: 2017-8-10
-  link: https://img.washingtonpost.com/wp-apps/imrs.php?src=https://img.washingtonpost.com/news/politics/wp-content/uploads/sites/11/2017/11/Trump-Properties-1.jpg&w=1484
+  link: https://www.washingtonpost.com/politics/president-trump-settles-in-for-17-day-vacation-at-his-secluded-new-jersey-club/2017/08/05/5c79347c-79d5-11e7-8f39-eeb7d3a2d304_story.html?utm_term=.22138ce95f42
 - location: Trump National Golf Club
   city: Bedminster, New Jersey
   date: 2017-8-9
-  link: https://img.washingtonpost.com/wp-apps/imrs.php?src=https://img.washingtonpost.com/news/politics/wp-content/uploads/sites/11/2017/11/Trump-Properties-1.jpg&w=1484
+  link: https://www.washingtonpost.com/politics/president-trump-settles-in-for-17-day-vacation-at-his-secluded-new-jersey-club/2017/08/05/5c79347c-79d5-11e7-8f39-eeb7d3a2d304_story.html?utm_term=.22138ce95f42
 - location: Trump National Golf Club
   city: Bedminster, New Jersey
   date: 2017-8-8
-  link: https://img.washingtonpost.com/wp-apps/imrs.php?src=https://img.washingtonpost.com/news/politics/wp-content/uploads/sites/11/2017/11/Trump-Properties-1.jpg&w=1484
+  link: https://www.washingtonpost.com/politics/president-trump-settles-in-for-17-day-vacation-at-his-secluded-new-jersey-club/2017/08/05/5c79347c-79d5-11e7-8f39-eeb7d3a2d304_story.html?utm_term=.22138ce95f42
 - location: Trump National Golf Club
   city: Bedminster, New Jersey
   date: 2017-8-7
-  link: https://img.washingtonpost.com/wp-apps/imrs.php?src=https://img.washingtonpost.com/news/politics/wp-content/uploads/sites/11/2017/11/Trump-Properties-1.jpg&w=1484
+  link: https://www.washingtonpost.com/politics/president-trump-settles-in-for-17-day-vacation-at-his-secluded-new-jersey-club/2017/08/05/5c79347c-79d5-11e7-8f39-eeb7d3a2d304_story.html?utm_term=.22138ce95f42
 - location: Trump National Golf Club
   city: Bedminster, New Jersey
   date: 2017-8-6
-  link: https://img.washingtonpost.com/wp-apps/imrs.php?src=https://img.washingtonpost.com/news/politics/wp-content/uploads/sites/11/2017/11/Trump-Properties-1.jpg&w=1484
+  link: https://www.washingtonpost.com/politics/president-trump-settles-in-for-17-day-vacation-at-his-secluded-new-jersey-club/2017/08/05/5c79347c-79d5-11e7-8f39-eeb7d3a2d304_story.html?utm_term=.22138ce95f42
 - location: Trump National Golf Club
   city: Bedminster, New Jersey
   date: 2017-8-5
-  link: https://img.washingtonpost.com/wp-apps/imrs.php?src=https://img.washingtonpost.com/news/politics/wp-content/uploads/sites/11/2017/11/Trump-Properties-1.jpg&w=1484
+  link: https://www.washingtonpost.com/politics/president-trump-settles-in-for-17-day-vacation-at-his-secluded-new-jersey-club/2017/08/05/5c79347c-79d5-11e7-8f39-eeb7d3a2d304_story.html?utm_term=.22138ce95f42
 - location: Trump National Golf Club
   city: Bedminster, New Jersey
   date: 2017-8-4
-  link: https://img.washingtonpost.com/wp-apps/imrs.php?src=https://img.washingtonpost.com/news/politics/wp-content/uploads/sites/11/2017/11/Trump-Properties-1.jpg&w=1484
+  link: https://www.washingtonpost.com/politics/president-trump-settles-in-for-17-day-vacation-at-his-secluded-new-jersey-club/2017/08/05/5c79347c-79d5-11e7-8f39-eeb7d3a2d304_story.html?utm_term=.22138ce95f42
 - location: Trump National Golf club
   city: Potomac Falls, Virginia
   date: 2017-7-30
