--- a/_data/trumps.yml
+++ b/_data/trumps.yml
@@ -1,4 +1,16 @@
 poops:
+- location: Mar-a-Lago
+  city: Palm Beach, Florida
+  date: 2017-12-10
+  link: https://twitter.com/kylegriffin1/status/939857268065161216
+- location: Mar-a-Lago
+  city: Palm Beach, Florida
+  date: 2017-12-9
+  link: https://twitter.com/markknoller/status/939550648294658049
+- location: Mar-a-Lago
+  city: Palm Beach, Florida
+  date: 2017-12-8
+  link: https://twitter.com/markknoller/status/939326075410223106
 - location: Trump International Golf Club
   city: West Palm Beach, Florida
   date: 2017-11-26
